# easy-rpc-node

./: .gitignore  Cargo.toml  LICENSE  build.js  esbuild.js  index.d.ts  index.js  index_wrapper.js  main.js  main.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/freebsd-x64/: package.json
npm/linux-arm-gnueabihf/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: package.json
npm/win32-x64-msvc/: package.json
old/: build.js  main.ts  package-lock.json  package.json
old/src/: ERPCTarget.ts  Options.ts  request.ts
src/: ERPCServer.ts  ERPCTarget.ts  lib.rs  request.ts  server.rs  target.rs  threadsafe_function.rs
src/erpc/: handler.rs  mod.rs  protocol.rs  server.rs  target.rs
src/erpc/protocol/: mod.rs
src/erpc/tests/: server.rs
src/server/: mod.rs
src/web/: mod.rs  server.rs  target.rs
types/: Server.ts
