[package]
edition = "2021"
name = "easy-rpc_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10", default-features = false, features = ["napi4", "serde-json", "async"] }
napi-derive = "2.9"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
