[package]
edition = "2021"
name = "easy-rpc_node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", features = ["full"] }
napi-derive = "2.9"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
futures-util = "0.3"
flume = "0.10"
nanoid = "0.4.0"
reqwest = { version = "0.11", default_features = false, features = [ "rustls-tls" ] }
log = "0.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
